# market

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: egocentricaction.yml  testing.yml
market.egg-info/: PKG-INFO
src/market/: market.py
src/market.egg-info/: SOURCES.txt
tests/: market_test.py
